[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.6"
took = "0.1"

# Day solutions
day01a = { path = "../day01a" }
day01b = { path = "../day01b" }
#day02b = { path = "../day02b" }
#day02a = { path = "../day02b" }
#day03b = { path = "../day02b" }
#day03a = { path = "../day02b" }
#day04b = { path = "../day02b" }
#day04a = { path = "../day02b" }
#day05b = { path = "../day02b" }
#day05a = { path = "../day02b" }
#day06b = { path = "../day02b" }
#day06a = { path = "../day02b" }
#day07b = { path = "../day02b" }
#day07a = { path = "../day02b" }
#day08b = { path = "../day02b" }
#day08a = { path = "../day02b" }
#day09b = { path = "../day02b" }
#day09a = { path = "../day02b" }
#day10b = { path = "../day02b" }
#day10a = { path = "../day02b" }
#day11b = { path = "../day02b" }
#day11a = { path = "../day02b" }
#day12b = { path = "../day02b" }
#day12a = { path = "../day02b" }
#day13b = { path = "../day02b" }
#day13a = { path = "../day02b" }
#day14b = { path = "../day02b" }
#day14a = { path = "../day02b" }
#day15b = { path = "../day02b" }
#day15a = { path = "../day02b" }
#day16b = { path = "../day02b" }
#day16a = { path = "../day02b" }
#day17b = { path = "../day02b" }
#day17a = { path = "../day02b" }
#day18b = { path = "../day02b" }
#day18a = { path = "../day02b" }
#day19b = { path = "../day02b" }
#day19a = { path = "../day02b" }
#day20b = { path = "../day02b" }
#day20a = { path = "../day02b" }
#day21b = { path = "../day02b" }
#day21a = { path = "../day02b" }
#day22b = { path = "../day02b" }
#day22a = { path = "../day02b" }
#day23b = { path = "../day02b" }
#day23a = { path = "../day02b" }
#day24b = { path = "../day02b" }
#day24a = { path = "../day02b" }
